fix issue on unlock video modal, now the price and title is visibile

--- a/imports/ui/stylesheets/player/infos.less
+++ b/imports/ui/stylesheets/player/infos.less
@@ -188,6 +188,7 @@
       background: linear-gradient(to right, @color-purple 0%,@color-purple 50%,#7068e2 51%,@color-purple 100%);
       height: 40px;
       width: 50px;
+      pointer-events: none;
     }
   }
 }
